--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,7 @@
                     //elementButtonSave.setAttribute("class","tealA400");
 
 
-                    elementButtonSave.setAttribute("onclick", "studentinfo('" + items[i].fullname + "',this)");
+                    elementButtonSave.setAttribute("onclick", "studentInfo('" + items[i].fullname + "',this)");
 
 
                     cell5.appendChild(elementButtonSave);
